# aalib

./: .gitignore  Makefile.am  configure.ac
doc/: Makefile.am  aalib.texi  aalib.texinfo
src/: aainfo.c  aakbdreg.c  aalib.c  aalinuxkbd.c  aaregist.c  aasavefont.c  aatest.c  aaxkbd.c
